<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/searchLayout"
    android:focusableInTouchMode="true"
    tools:context="com.ogolodali.view.SearchActivity">

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/searchTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:nextFocusUp="@id/searchTextView" android:nextFocusLeft="@id/searchTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cookingTime"
        android:id="@+id/cookingTimeTextView"
        android:layout_below="@+id/searchTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/cookingTimeBoundsTextView"
        android:layout_below="@+id/cookingTimeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/difficulty"
        android:id="@+id/difficultyTextView"
        android:layout_alignTop="@+id/cookingTimeTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/cookingTimeTextView"
        android:layout_toEndOf="@+id/cookingTimeTextView"
        android:onClick="toListRecipe"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/chosenIngredientsTextView"
        android:layout_above="@+id/searchButton">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chosenIngredientsListView"
            android:layout_below="@+id/cookingTimeBoundsTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:paddingRight="2dp"
            android:layout_weight="1"
            />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chosenTagsListView"
            android:layout_gravity="right"
            android:paddingLeft="2dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/chosenIngredients"
        android:id="@+id/chosenIngredientsTextView"
        android:layout_below="@+id/cookingTimeTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:layout_toStartOf="@+id/searchButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/chosenTags"
        android:id="@+id/chosenTagsTextView"
        android:layout_below="@+id/difficultyTextView"
        android:layout_alignRight="@+id/difficultyBoundsTextView"
        android:layout_marginTop="60dp"
        android:layout_alignLeft="@+id/difficultyTextView"
        android:layout_alignStart="@+id/difficultyTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/difficultyBoundsTextView"
        android:layout_below="@+id/difficultyTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
